k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-webapp
spec:
  selector:
    matchLabels:
      app: go-webapp
  template:
    metadata:
      labels:
        app: go-webapp
    spec:
      containers:
      - name: go-webapp
        image: go-webapp
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8090
