k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-webapp
spec:
  selector:
    app: go-webapp
  ports:
  - port: 8090
    targetPort: 8090
